Minor style fixes link health check
- rename to link check
- truncate urls more
- make overflow hidden

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -6025,6 +6025,8 @@ $link-status-nok-icon: '\f06a';
 
 .link-status {
     color: $monsoon;
+    overflow-x: hidden;
+    white-space: nowrap;
 
     &::before {
         @include icon($link-status-icon);
